끝 로그인 카카오 로그인 않마

--- a/foot/src/main/resources/templates/user/favorites/FavoritesUserList.html
+++ b/foot/src/main/resources/templates/user/favorites/FavoritesUserList.html
@@ -473,7 +473,7 @@
 									<thead class="bg-light">
 									<tr th:if="${#lists.isEmpty(list)}" class="hover-artions-trigger btn-reveal-trigger position-static">
 				                      <td colspan="10">
-				                        <p class="fs-0" style="padding-top: 12px">매칭정보가 없습니다</p>
+				                        <p class="fs-0" style="padding-top: 12px">즐겨찾기 정보가 없습니다</p>
 				                      </td>
 				                    </tr>
 										<tr th:unless="${#lists.isEmpty(list)}">
