--- a/foot/src/main/resources/templates/user/include/head.html
+++ b/foot/src/main/resources/templates/user/include/head.html
@@ -416,7 +416,7 @@
 								    
 								     <!-- 로그인하지 않은 상태 -->
 									 <th:block th:if="${session.sessIdUser == null}">
-										<li><a class="dropdown-item" href="/user/template/pages/forgot-password.html">비밀번호 찾기</a></li>
+<!-- 										<li><a class="dropdown-item" href="/user/template/pages/forgot-password.html">비밀번호 찾기</a></li> -->
 									</th:block>
 									 <!-- 로그인한 상태 -->
 								    <th:block th:if="${session.sessIdUser != null}">
