--- a/foot/src/main/resources/templates/user/reservation/ReservationUserList.html
+++ b/foot/src/main/resources/templates/user/reservation/ReservationUserList.html
@@ -493,11 +493,24 @@
 <!--                               <span id="priceRange-value" class="small"></span> -->
 <!--                            </div> -->
 <!--                         </div> -->
-                       <div class="mb-8">
-						    <h5 class="mb-3">즐겨찾기</h5>
-						    <input class="form-check-input" type="checkbox" id="filterFavorite" />
-						    <label class="form-check-label" for="filterFavorite">즐겨찾기</label>
-						</div>
+<!-- <div class="mb-8"> -->
+<!--     <h5 class="mb-3">즐겨찾기</h5> -->
+<!--     <div class="form-check mb-2"> -->
+<!--         <input  -->
+<!--             class="form-check-input region-filter"  -->
+<!--             type="checkbox"  -->
+<!--             name="shOption"  -->
+<!--             value="5" -->
+<!--             id="fdelMyOption" -->
+<!--             th:checked="${vo.shOption != null and vo.shOption == 5}" /> -->
+<!--         <label class="form-check-label" for="fdelMyOption">즐겨찾기만 보기</label> -->
+
+<!--         <input  -->
+<!--             type="hidden"  -->
+<!--             name="shValue"  -->
+<!--             value="0" /> -->
+<!--     </div> -->
+<!-- </div> -->
                         
                         
                          <h5 class="mb-3">풋살장 지도</h5>
@@ -1058,17 +1071,17 @@ $(document).ready(function () {
             data: { fiSeq: fiSeq },
             success: function (response) {
                 if (response.status === 'added') {
-                    alert("즐겨찾기에 추가되었습니다.");
+                   // alert("즐겨찾기에 추가되었습니다.");
                     toggleStarIcon($anchor, true);
                 } else if (response.status === 'deleted') {
-                    alert("즐겨찾기에서 삭제되었습니다.");
+                   // alert("즐겨찾기에서 삭제되었습니다.");
                     toggleStarIcon($anchor, false);
                 } else if (response.status === 'error') {
                     alert(response.message);
                 }
             },
             error: function () {
-                alert("서버와 통신 중 오류가 발생했습니다.");
+              //  alert("서버와 통신 중 오류가 발생했습니다.");
             }
         });
     });
