--- a/foot/src/main/resources/templates/xdm/usermember/MemberXdmList.html
+++ b/foot/src/main/resources/templates/xdm/usermember/MemberXdmList.html
@@ -227,12 +227,16 @@
                                         <path d="M5.884 6.68a.5.5 0 1 0-.768.64L7.349 10l-2.233 2.68a.5.5 0 0 0 .768.64L8 10.781l2.116 2.54a.5.5 0 0 0 .768-.641L8.651 10l2.233-2.68a.5.5 0 0 0-.768-.64L8 9.219l-2.116-2.54z"/>
                                         <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2M9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z"/>
                                       </svg>
-                                   </button>                                
-<!--                                 <a class="btn btn-primary" href="" role="button" style="float: right; margin-right:  5px;"> -->
-<!--                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-type-underline" viewBox="0 0 16 16"> -->
-<!--                                         <path d="M5.313 3.136h-1.23V9.54c0 2.105 1.47 3.623 3.917 3.623s3.917-1.518 3.917-3.623V3.136h-1.23v6.323c0 1.49-.978 2.57-2.687 2.57s-2.687-1.08-2.687-2.57zM12.5 15h-9v-1h9z"/> -->
-<!--                                       </svg> -->
-<!--                                     </a>     -->
+                                   </button>    
+                                <form id="uploadForm" method="post" enctype="multipart/form-data" action="/user/uploadExcel" style="display: flex; justify-content: flex-end; align-items: center;">
+								    <input type="file" id="excelFile" name="excelFile" accept=".xlsx" style="margin-right: 10px;" />
+								    <button class="btn btn-primary" type="submit" style="display: flex; align-items: center; gap: 5px;">
+								        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-type-underline" viewBox="0 0 16 16">
+								            <path d="M5.313 3.136h-1.23V9.54c0 2.105 1.47 3.623 3.917 3.623s3.917-1.518 3.917-3.623V3.136h-1.23v6.323c0 1.49-.978 2.57-2.687 2.57s-2.687-1.08-2.687-2.57zM12.5 15h-9v-1h9z"/>
+								        </svg>
+								        업로드
+								    </button>
+								</form>
                                 
                             </div>
                         </div>
@@ -380,6 +384,33 @@ function downloadExcel() {
     // 주소에 파라미터를 붙여 요청
     window.location.href = '/blogXdmExcel?' + params.toString();
 }
+</script>
+
+
+<script>
+document.getElementById('uploadForm').addEventListener('submit', function(e) {
+    const fileInput = document.getElementById('excelFile');
+    const file = fileInput.files[0];
+    if (!file) {
+        alert('파일을 선택하세요');
+        e.preventDefault();
+        return;
+    }
+
+    // 확장자 체크
+    if (!file.name.endsWith('.xlsx')) {
+        alert('xlsx 파일만 업로드 가능합니다.');
+        e.preventDefault();
+        return;
+    }
+
+    // 용량 체크 (예: 5MB 제한)
+    if (file.size > 5 * 1024 * 1024) {
+        alert('파일 크기는 5MB 이하만 가능합니다.');
+        e.preventDefault();
+        return;
+    }
+});
 </script>
 
 </body>
