--- a/foot/src/main/resources/templates/xdm/codegroup/codeGroupXdmList.html
+++ b/foot/src/main/resources/templates/xdm/codegroup/codeGroupXdmList.html
@@ -232,6 +232,15 @@
         <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2M9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z"/>
     </svg>
 </a>
+                                <form id="uploadForm" method="post" enctype="multipart/form-data" action="/user/uploadExcel" style="display: flex; justify-content: flex-end; align-items: center;">
+								    <input type="file" id="excelFile" name="excelFile" accept=".xlsx" style="margin-right: 10px;" />
+								    <button class="btn btn-primary" type="submit" style="display: flex; align-items: center; gap: 5px;">
+								        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-type-underline" viewBox="0 0 16 16">
+								            <path d="M5.313 3.136h-1.23V9.54c0 2.105 1.47 3.623 3.917 3.623s3.917-1.518 3.917-3.623V3.136h-1.23v6.323c0 1.49-.978 2.57-2.687 2.57s-2.687-1.08-2.687-2.57zM12.5 15h-9v-1h9z"/>
+								        </svg>
+								        업로드
+								    </button>
+								</form>
                             </div>
                         </div>
                     </div>
